# ironic-tempest-plugin

./: .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  CONTRIBUTING.rst  HACKING.rst  README.rst  pyproject.toml  requirements.txt  setup.cfg  test-requirements.txt  tox.ini  whitelist-file
doc/: requirements.txt
doc/source/: conf.py  index.rst  installation.rst  usage.rst
doc/source/config/: with-nova.rst
ironic_tempest_plugin/: README.rst  __init__.py  config.py  exceptions.py  manager.py  plugin.py
ironic_tempest_plugin/common/: utils.py  waiters.py
ironic_tempest_plugin/services/: introspection_client.py
ironic_tempest_plugin/services/baremetal/: base.py
ironic_tempest_plugin/services/baremetal/v1/json/: baremetal_client.py
ironic_tempest_plugin/tests/: test_ironic_tempest_plugin.py
ironic_tempest_plugin/tests/api/: base.py
ironic_tempest_plugin/tests/api/admin/: base.py  test_allocations.py  test_api_discovery.py  test_chassis.py  test_conductor.py  test_deploy_templates.py  test_drivers.py  test_inspection_rules.py  test_inspection_rules_negatives.py  test_microversion_enforcement.py  test_nodes.py  test_nodestates.py  test_portgroups.py  test_ports.py  test_ports_negative.py  test_runbooks.py  test_shards.py  test_volume_connector.py  test_volume_resource.py  test_volume_target.py
ironic_tempest_plugin/tests/api/rbac_defaults/: test_nodes.py  test_runbooks.py
ironic_tempest_plugin/tests/scenario/: baremetal_manager.py  baremetal_standalone_manager.py  introspection_manager.py  test_baremetal_basic_ops.py  test_baremetal_boot_from_volume.py  test_baremetal_multitenancy.py  test_baremetal_single_tenant.py  test_introspection_basic.py  test_introspection_discovery.py
ironic_tempest_plugin/tests/scenario/ironic_standalone/: storage_inventory_schema.json  test_adoption.py  test_advanced_ops.py  test_basic_ops.py  test_bios.py  test_cleaning.py  test_inspection_basic.py  test_ramdisk_iso.py
releasenotes/notes/: deprecate-inspector-0de255090cd2cb82.yaml  drop-py-2-7-c81e7ff14950791b.yaml  drop-python38-support-8bfac4d85b4b19e2.yaml
tools/: make-tempest-plugin-repo.sh
zuul.d/: project.yaml  stable-jobs.yaml
