[metadata]
name = ironic-tempest-plugin
summary = Tempest plugin for ironic and ironic-inspector
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/ironic-tempest-plugin/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    ironic_tempest_plugin

[entry_points]
tempest.test_plugins =
    ironic_tests = ironic_tempest_plugin.plugin:IronicTempestPlugin
